--- a/HOMEWORK6_task7.html
+++ b/HOMEWORK6_task7.html
@@ -3,29 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>HOMEWORK6_task6</title>
-    <body>
+<body>
 
 
 
-    </body>
+</body>
 
-    <script>
-let bodyElem = document.createElement("body");
-console.log(bodyElem);
-let newMainElem = document.createElement("main");
- newMainElem.className = "mainClass check item";
-console.log(newMainElem);
-let newDivElem = document.createElement("div");
-newDivElem.id ="myDiv";
-console.log(newDivElem);
-let newPElem = document.createElement("p");
-newPElem.textContent ="First paragraph";
-console.log(newPElem);
-
-newMainElem.insertAdjacentHTML("beforeEnd", '<body>');
-    
-
-    </script>
+<script>
+    document.body.insertAdjacentHTML('afterbegin', '<main class="mainClass check item">');
+    document.body.children[0].insertAdjacentHTML('afterbegin', '<div id="myDiv">');
+    document.body.children[0].children[0].insertAdjacentHTML('afterbegin', '<p>First paragraph</p>');
+</script>
 </head>
 </html>
 
